feat: added email templats and page to edit them
